--- a/act_Application/Views/Notificaciones/Index.cshtml
+++ b/act_Application/Views/Notificaciones/Index.cshtml
@@ -71,7 +71,7 @@
                                                     <p class="modal__paragraph"><strong>Valor:</strong> @notificacionAdmin.Aportaciones.Valor</p>
                                                     <p class="modal__paragraph"><strong>Descripcion:</strong></p>
                                                     <p class="modal__description">@notificacionAdmin.Notificaciones.Descripcion</p>
-                                                    <form asp-action="Visuzalizado">
+                                                    <form asp-action="VisualizadoA">
                                                         <div class="container-modal-btn">
                                                             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                                                             <input type="hidden" asp-for="@notificacionAdmin.Notificaciones.Id" name="Id" />
