--- a/act_Application/Views/Notificaciones/Index.cshtml
+++ b/act_Application/Views/Notificaciones/Index.cshtml
@@ -43,7 +43,7 @@
                     {
                         if (notificacionAdmin.Notificaciones.Destino == "Administrador")
                         {
-                            if (notificacionAdmin.Notificaciones.Visto == "NO")
+                            if (notificacionAdmin.Notificaciones.Visto == "NO" || notificacionAdmin.Notificaciones.Visto == "")
                             {
                                 switch (new ObtenerTipoNotificacion().ClasificarInformacion(notificacionAdmin.Notificaciones.IdActividad))
                                 {
@@ -53,6 +53,24 @@
                                             <p class="notif-text">Razon: @notificacionAdmin.Notificaciones.Razon</p>
                                             <p class="notif-text">Fecha: @notificacionAdmin.Notificaciones.FechaGeneracion.ToString("dd-MMMM-yyyy")</p>
                                             <button class="btn-visualizar" data-notification-id="@notificacionAdmin.Notificaciones.Id">Visualizar</button>
+                                        </div>
+                                        <div class="modal-principal" id="modal-@notificacionAdmin.Notificaciones.Id">
+                                            <div class="modal__container">
+                                                <h2 class="modal__title">Detalles</h2>
+                                                <div class="modal__content">
+                                                    <p class="modal__paragraph"><strong>Razon:</strong> @notificacionAdmin.Notificaciones.Razon</p>
+                                                    <p class="modal__paragraph"><strong>Fecha:</strong> @notificacionAdmin.Notificaciones.FechaGeneracion.ToString("dd-MM-yyyy")</p>
+                                                    <p class="modal__paragraph"><strong>Descripcion:</strong></p>
+                                                    <p class="modal__description">@notificacionAdmin.Notificaciones.Descripcion</p>
+                                                    <form asp-action="VisualizadoA">
+                                                        <div class="container-modal-btn">
+                                                            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                                                            <input type="hidden" asp-for="@notificacionAdmin.Notificaciones.Id" name="Id" />
+                                                            <button type="submit" data-notification-id="@notificacionAdmin.Notificaciones.Id" class="modal__close">Cerrar</button>
+                                                        </div>
+                                                    </form>
+                                                </div>
+                                            </div>
                                         </div>
                                         break;
                                     case "APOR":
@@ -97,6 +115,25 @@
                                             <p class="notif-text">Fecha: @notificacionAdmin.Notificaciones.FechaGeneracion.ToString("dd-MMMM-yyyy")</p>
                                             <button class="btn-visualizar" data-notification-id="@notificacionAdmin.Notificaciones.Id">Visualizar</button>
                                         </div>
+                                        <div class="modal-principal" id="modal-@notificacionAdmin.Notificaciones.Id">
+                                            <div class="modal__container">
+                                                <h2 class="modal__title">Detalles</h2>
+                                                <div class="modal__content">
+                                                    <p class="modal__paragraph"><strong>Razon:</strong> @notificacionAdmin.Notificaciones.Razon</p>
+                                                    <p class="modal__paragraph"><strong>Fecha:</strong> @notificacionAdmin.Notificaciones.FechaGeneracion.ToString("dd-MM-yyyy")</p>
+                                                    <p class="modal__paragraph"><strong>Valor:</strong> @notificacionAdmin.Cuotas.Valor</p>
+                                                    <p class="modal__paragraph"><strong>Descripcion:</strong></p>
+                                                    <p class="modal__description">@notificacionAdmin.Notificaciones.Descripcion</p>
+                                                    <form asp-action="VisualizadoC">
+                                                        <div class="container-modal-btn">
+                                                            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                                                            <input type="hidden" asp-for="@notificacionAdmin.Notificaciones.Id" name="Id" />
+                                                            <button type="submit" data-notification-id="@notificacionAdmin.Notificaciones.Id" class="modal__close">Cerrar</button>
+                                                        </div>
+                                                    </form>
+                                                </div>
+                                            </div>
+                                        </div>
                                         break;
                                     case "AMUL":
                                         <div class="notif-container">
@@ -113,6 +150,25 @@
                                             <p class="notif-text">Fecha: @notificacionAdmin.Notificaciones.FechaGeneracion.ToString("dd-MMMM-yyyy")</p>
                                             <button class="btn-visualizar" data-notification-id="@notificacionAdmin.Notificaciones.Id">Visualizar</button>
                                         </div>
+                                        <div class="modal-principal" id="modal-@notificacionAdmin.Notificaciones.Id">
+                                            <div class="modal__container">
+                                                <h2 class="modal__title">Detalles</h2>
+                                                <div class="modal__content">
+                                                    <p class="modal__paragraph"><strong>Razon:</strong> @notificacionAdmin.Notificaciones.Razon</p>
+                                                    <p class="modal__paragraph"><strong>Fecha:</strong> @notificacionAdmin.Notificaciones.FechaGeneracion.ToString("dd-MM-yyyy")</p>
+                                                    <p class="modal__paragraph"><strong>Valor:</strong> @notificacionAdmin.Cuotas.Valor</p>
+                                                    <p class="modal__paragraph"><strong>Descripcion:</strong></p>
+                                                    <p class="modal__description">@notificacionAdmin.Notificaciones.Descripcion</p>
+                                                    <form asp-action="VisualizadoA">
+                                                        <div class="container-modal-btn">
+                                                            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                                                            <input type="hidden" asp-for="@notificacionAdmin.Notificaciones.Id" name="Id" />
+                                                            <button type="submit" data-notification-id="@notificacionAdmin.Notificaciones.Id" class="modal__close">Cerrar</button>
+                                                        </div>
+                                                    </form>
+                                                </div>
+                                            </div>
+                                        </div>
                                         break;
                                     case "CCUO":
                                         <div class="notif-container">
@@ -121,6 +177,26 @@
                                             <p class="notif-text">Fecha: @notificacionAdmin.Notificaciones.FechaGeneracion.ToString("dd-MMMM-yyyy")</p>
                                             <button class="btn-visualizar" data-notification-id="@notificacionAdmin.Notificaciones.Id">Visualizar</button>
                                         </div>
+                                        <div class="modal-principal" id="modal-@notificacionAdmin.Notificaciones.Id">
+                                            <div class="modal__container">
+                                                <h2 class="modal__title">Detalles</h2>
+                                                <div class="modal__content">
+                                                    <p class="modal__paragraph"><strong>Razon:</strong> @notificacionAdmin.Notificaciones.Razon</p>
+                                                    <p class="modal__paragraph"><strong>Fecha:</strong> @notificacionAdmin.Notificaciones.FechaGeneracion.ToString("dd-MM-yyyy")</p>
+                                                    <p class="modal__paragraph"><strong>Valor:</strong> @notificacionAdmin.Cuotas.Valor</p>
+                                                    <p class="modal__paragraph"><strong>Descripcion:</strong></p>
+                                                    <p class="modal__description">@notificacionAdmin.Notificaciones.Descripcion</p>
+                                                    <form asp-action="VisualizadoC">
+                                                        <div class="container-modal-btn">
+                                                            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                                                            <input type="hidden" asp-for="@notificacionAdmin.Notificaciones.Id" name="Id" />
+                                                            <button type="submit" data-notification-id="@notificacionAdmin.Notificaciones.Id" class="modal__close">Cerrar</button>
+                                                        </div>
+                                                    </form>
+                                                </div>
+                                            </div>
+                                        </div>
+
                                         break;
                                     case "ACUO":
                                         <div class="notif-container">
