Objetivo 4 - Vistas 1. Modificacion en los asp-action de vista.

--- a/act_Application/Views/Notificaciones/Index.cshtml
+++ b/act_Application/Views/Notificaciones/Index.cshtml
@@ -62,7 +62,7 @@
                                                     <p class="modal__paragraph"><strong>Fecha:</strong> @notificacionAdmin.Notificaciones.FechaGeneracion.ToString("dd-MM-yyyy")</p>
                                                     <p class="modal__paragraph"><strong>Descripcion:</strong></p>
                                                     <p class="modal__description">@notificacionAdmin.Notificaciones.Descripcion</p>
-                                                    <form asp-action="VisualizadoA">
+                                                    <form asp-action="Visualizado">
                                                         <div class="container-modal-btn">
                                                             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                                                             <input type="hidden" asp-for="@notificacionAdmin.Notificaciones.Id" name="Id" />
@@ -107,6 +107,25 @@
                                             <p class="notif-text">Fecha: @notificacionAdmin.Notificaciones.FechaGeneracion.ToString("dd-MMMM-yyyy")</p>
                                             <button class="btn-visualizar" data-notification-id="@notificacionAdmin.Notificaciones.Id">Visualizar</button>
                                         </div>
+                                        <div class="modal-principal" id="modal-@notificacionAdmin.Notificaciones.Id">
+                                            <div class="modal__container">
+                                                <h2 class="modal__title">Detalles</h2>
+                                                <div class="modal__content">
+                                                    <p class="modal__paragraph"><strong>Razon:</strong> @notificacionAdmin.Notificaciones.Razon</p>
+                                                    <p class="modal__paragraph"><strong>Fecha:</strong> @notificacionAdmin.Notificaciones.FechaGeneracion.ToString("dd-MM-yyyy")</p>
+                                                    <p class="modal__paragraph"><strong>Valor:</strong> @notificacionAdmin.Multas.Valor</p>
+                                                    <p class="modal__paragraph"><strong>Descripcion:</strong></p>
+                                                    <p class="modal__description">@notificacionAdmin.Notificaciones.Descripcion</p>
+                                                    <form asp-action="Visualizado">
+                                                        <div class="container-modal-btn">
+                                                            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                                                            <input type="hidden" asp-for="@notificacionAdmin.Notificaciones.Id" name="Id" />
+                                                            <button type="submit" data-notification-id="@notificacionAdmin.Notificaciones.Id" class="modal__close">Cerrar</button>
+                                                        </div>
+                                                    </form>
+                                                </div>
+                                            </div>
+                                        </div>
                                         break;
                                     case "CMUL":
                                         <div class="notif-container">
@@ -121,7 +140,7 @@
                                                 <div class="modal__content">
                                                     <p class="modal__paragraph"><strong>Razon:</strong> @notificacionAdmin.Notificaciones.Razon</p>
                                                     <p class="modal__paragraph"><strong>Fecha:</strong> @notificacionAdmin.Notificaciones.FechaGeneracion.ToString("dd-MM-yyyy")</p>
-                                                    <p class="modal__paragraph"><strong>Valor:</strong> @notificacionAdmin.Cuotas.Valor</p>
+                                                    <p class="modal__paragraph"><strong>Valor:</strong> @notificacionAdmin.Multas.Valor</p>
                                                     <p class="modal__paragraph"><strong>Descripcion:</strong></p>
                                                     <p class="modal__description">@notificacionAdmin.Notificaciones.Descripcion</p>
                                                     <form asp-action="Visualizado">
@@ -142,6 +161,25 @@
                                             <p class="notif-text">Fecha: @notificacionAdmin.Notificaciones.FechaGeneracion.ToString("dd-MMMM-yyyy")</p>
                                             <button class="btn-visualizar" data-notification-id="@notificacionAdmin.Notificaciones.Id">Visualizar</button>
                                         </div>
+                                        <div class="modal-principal" id="modal-@notificacionAdmin.Notificaciones.Id">
+                                            <div class="modal__container">
+                                                <h2 class="modal__title">Detalles</h2>
+                                                <div class="modal__content">
+                                                    <p class="modal__paragraph"><strong>Razon:</strong> @notificacionAdmin.Notificaciones.Razon</p>
+                                                    <p class="modal__paragraph"><strong>Fecha:</strong> @notificacionAdmin.Notificaciones.FechaGeneracion.ToString("dd-MM-yyyy")</p>
+                                                    <p class="modal__paragraph"><strong>Valor:</strong> @notificacionAdmin.Multas.Valor</p>
+                                                    <p class="modal__paragraph"><strong>Descripcion:</strong></p>
+                                                    <p class="modal__description">@notificacionAdmin.Notificaciones.Descripcion</p>
+                                                    <form asp-action="Visualizado">
+                                                        <div class="container-modal-btn">
+                                                            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                                                            <input type="hidden" asp-for="@notificacionAdmin.Notificaciones.Id" name="Id" />
+                                                            <button type="submit" data-notification-id="@notificacionAdmin.Notificaciones.Id" class="modal__close">Cerrar</button>
+                                                        </div>
+                                                    </form>
+                                                </div>
+                                            </div>
+                                        </div>
                                         break;
                                     case "CUOT":
                                         <div class="notif-container">
@@ -159,7 +197,7 @@
                                                     <p class="modal__paragraph"><strong>Valor:</strong> @notificacionAdmin.Cuotas.Valor</p>
                                                     <p class="modal__paragraph"><strong>Descripcion:</strong></p>
                                                     <p class="modal__description">@notificacionAdmin.Notificaciones.Descripcion</p>
-                                                    <form asp-action="VisualizadoA">
+                                                    <form asp-action="Visualizado">
                                                         <div class="container-modal-btn">
                                                             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                                                             <input type="hidden" asp-for="@notificacionAdmin.Notificaciones.Id" name="Id" />
@@ -186,7 +224,7 @@
                                                     <p class="modal__paragraph"><strong>Valor:</strong> @notificacionAdmin.Cuotas.Valor</p>
                                                     <p class="modal__paragraph"><strong>Descripcion:</strong></p>
                                                     <p class="modal__description">@notificacionAdmin.Notificaciones.Descripcion</p>
-                                                    <form asp-action="VisualizadoC">
+                                                    <form asp-action="Visualizado">
                                                         <div class="container-modal-btn">
                                                             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                                                             <input type="hidden" asp-for="@notificacionAdmin.Notificaciones.Id" name="Id" />
@@ -196,7 +234,6 @@
                                                 </div>
                                             </div>
                                         </div>
-
                                         break;
                                     case "ACUO":
                                         <div class="notif-container">
@@ -204,6 +241,25 @@
                                             <p class="notif-text">Razon: @notificacionAdmin.Notificaciones.Razon</p>
                                             <p class="notif-text">Fecha: @notificacionAdmin.Notificaciones.FechaGeneracion.ToString("dd-MMMM-yyyy")</p>
                                             <button class="btn-visualizar" data-notification-id="@notificacionAdmin.Notificaciones.Id">Visualizar</button>
+                                        </div>
+                                        <div class="modal-principal" id="modal-@notificacionAdmin.Notificaciones.Id">
+                                            <div class="modal__container">
+                                                <h2 class="modal__title">Detalles</h2>
+                                                <div class="modal__content">
+                                                    <p class="modal__paragraph"><strong>Razon:</strong> @notificacionAdmin.Notificaciones.Razon</p>
+                                                    <p class="modal__paragraph"><strong>Fecha:</strong> @notificacionAdmin.Notificaciones.FechaGeneracion.ToString("dd-MM-yyyy")</p>
+                                                    <p class="modal__paragraph"><strong>Valor:</strong> @notificacionAdmin.Cuotas.Valor</p>
+                                                    <p class="modal__paragraph"><strong>Descripcion:</strong></p>
+                                                    <p class="modal__description">@notificacionAdmin.Notificaciones.Descripcion</p>
+                                                    <form asp-action="Visualizado">
+                                                        <div class="container-modal-btn">
+                                                            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                                                            <input type="hidden" asp-for="@notificacionAdmin.Notificaciones.Id" name="Id" />
+                                                            <button type="submit" data-notification-id="@notificacionAdmin.Notificaciones.Id" class="modal__close">Cerrar</button>
+                                                        </div>
+                                                    </form>
+                                                </div>
+                                            </div>
                                         </div>
                                         break;
                                     case "PRES":
