--- a/act_Application/Views/Notificaciones/Index.cshtml
+++ b/act_Application/Views/Notificaciones/Index.cshtml
@@ -66,6 +66,7 @@
                                                         <div class="container-modal-btn">
                                                             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                                                             <input type="hidden" asp-for="@notificacionAdmin.Notificaciones.Id" name="Id" />
+                                                            <input type="hidden" value="1" name="Opcion" />
                                                             <button type="submit" data-notification-id="@notificacionAdmin.Notificaciones.Id" class="modal__close">Cerrar</button>
                                                         </div>
                                                     </form>
