Objetivo 4 - Vistas. 1. Modificacion terminada de Metodo de Actualizacion de Datos 2. Modificacionesen Program

--- a/act_Application/Views/Notificaciones/Index.cshtml
+++ b/act_Application/Views/Notificaciones/Index.cshtml
@@ -112,8 +112,8 @@
                                                                         <option value="@item.Nombre">@item.Nombre</option>
                                                                     }
                                                                 </select>
-                                                                <select name="TipoEstado" required>
-                                                                    <option value="">Selecciona el Tipo de Usuario</option>
+                                                                <select name="Estado" required>
+                                                                    <option value="">Selecciona el Estado de la Cuenta del Usuario</option>
                                                                     @foreach (var item in ViewData["ItemEstado"] as List<ListItems>)
                                                                     {
                                                                         <option value="@item.Nombre">@item.Nombre</option>
