--- a/act_Application/Views/Notificaciones/Index.cshtml
+++ b/act_Application/Views/Notificaciones/Index.cshtml
@@ -102,8 +102,8 @@
                                                         <div class="modal-secundaria__content">
                                                             <form asp-action="Visualizado">
                                                                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                                                                <input type="hidden" asp-for="@notificacionAdmin.Notificaciones.Id" name="Id" />
-                                                                <input type="hidden" asp-for="@notificacionAdmin.Usuarios.Id" name="IdU" />
+                                                                <input type="hidden" asp-for="@notificacionAdmin.Notificaciones.Id" name="IdN" />
+                                                                <input type="hidden" asp-for="@notificacionAdmin.Usuarios.Id" name="IdA" />
                                                                 <input type="hidden" value="1" name="Opcion" required/>
                                                                 <select name="TipoUser" required>
                                                                     <option value="">Selecciona el Tipo de Usuario</option>
