--- a/act_Application/Views/Notificaciones/Index.cshtml
+++ b/act_Application/Views/Notificaciones/Index.cshtml
@@ -105,7 +105,7 @@
                                                                 <input type="hidden" asp-for="@notificacionAdmin.Notificaciones.Id" name="IdN" />
                                                                 <input type="hidden" asp-for="@notificacionAdmin.Usuarios.Id" name="IdA" />
                                                                 <input type="hidden" value="1" name="Opcion" required/>
-                                                                <select name="TipoUser" required>
+                                                                <select asp-for="@notificacionAdmin.Usuarios.TipoUser" name="TipoUser" required>
                                                                     <option value="">Selecciona el Tipo de Usuario</option>
                                                                     @foreach(var item in ViewData["ItemTipoUs"] as List<ListItems>)
                                                                     {
@@ -149,7 +149,7 @@
                                                     <form asp-action="Visualizado">
                                                         <div class="container-modal-btn">
                                                             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                                                            <input type="hidden" asp-for="@notificacionAdmin.Notificaciones.Id" name="Id" />
+                                                            <input type="hidden" asp-for="@notificacionAdmin.Notificaciones.Id" name="IdN" />
                                                             <button type="submit" data-notification-id="@notificacionAdmin.Notificaciones.Id" class="modal__close">Cerrar</button>
                                                         </div>
                                                     </form>
